--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,10 +6,11 @@
 // Colors
 $color-primary: #4183C4;
 $color-background: #fefefe;
+$color-text: #333;
 
 // Black and white
-$black: #000;
-$white: #fff;
+$black: #222;
+$white: #fafafa;
 
 // Font stacks
 $fonts-general: Helvetica, Arial, sans-serif;
