--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,7 +14,7 @@ $white: #fafafa;
 
 // Font stacks
 $fonts-general: Helvetica, Arial, sans-serif;
-$fonts-header: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$fonts-headers: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
