--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,6 +7,7 @@
 $color-primary: #4183C4;
 $color-background: #fefefe;
 $color-text: #333;
+$color-header: #222;
 
 // Black and white
 $black: #222;
