--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,8 @@
 //
 
 // Colors
-$color-primary: #4183C4;
+$color-primary: #00838F;
+
 $color-background: #fefefe;
 $color-text: #333;
 $color-header: #222;
