--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,7 @@
 @import "reset";
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
+@import "header";
 
 /**************/
 /* BASE RULES */
