--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -3,4 +3,5 @@
   background: $color-primary;
   background: linear-gradient( 25deg, darken($color-primary, 15), $color-primary );
   padding: $spacing-normal;
+  color: $white;
 }
