--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,4 +1,4 @@
-.header {
+.header__wrapper {
   width: 100%;
   background: $color-primary;
   background: linear-gradient( 25deg, darken($color-primary, 15), $color-primary );
