--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
           <a href="{{ site.baseurl }}/" class="header__avatar-link"><img src="{{ site.avatar }}" class="header__avatar" /></a>
 
           <div class="header__site-info">
-            <h1 class="header__site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <h1 class="header__site-name"><a href="{{ site.baseurl }}/" class="header__site-name__link">{{ site.name }}</a></h1>
             <p class="header__site-description">{{ site.description }}</p>
           </div>
 
