--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,7 @@
+* + * {
+  margin-top: $spacing-normal;
+}
+
 html {
   font-size: 100%;
 }
@@ -21,7 +25,6 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 
   line-height: 1.7;
-  margin: 1em 0 15px;
   padding: 0;
 
   @include mobile {
@@ -49,7 +52,6 @@ h4 {
 }
 
 p {
-  margin: 15px 0;
 }
 
 a {
@@ -63,8 +65,7 @@ a {
 }
 
 ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
+  padding-left: $spacing-normal;
 }
 
 ul {
