--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,5 +48,7 @@
       </div>
     </div>
 
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px|Sue+Ellen+Francisco" rel="stylesheet">
+
   </body>
 </html>
