--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,7 +16,7 @@ $white: #fafafa;
 
 // Font stacks
 $fonts-general: 'Slabo 27px', Helvetica, Arial, sans-serif;
-$fonts-headers: 'Sue Ellen Francisco', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$fonts-headers: 'Sue Ellen Francisco', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 // Spacing and sizing
 $spacing-normal: 2rem;
