--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -7,7 +7,10 @@
 }
 
 .header a {
-  color: lighten($color-primary, 10);
+  color: $white;
+  &:hover {
+    color: lighten($color-primary, 10);
+  }
 }
 
 .header__avatar-link {
