--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -33,22 +33,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 2rem;
   a {
     color: inherit;
   }
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 1.7rem;
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 1.5rem;
 }
 
 h4 {
-  font-size: 18px;
+  font-size: 1.25rem;
 }
 
 p {
