--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px|Sue+Ellen+Francisco" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Libre+Baskerville:700" rel="stylesheet">
 
   </body>
 </html>
