--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,8 +15,8 @@ $black: #222;
 $white: #fafafa;
 
 // Font stacks
-$fonts-general: 'Slabo 27px', Helvetica, Arial, sans-serif;
-$fonts-headers: 'Sue Ellen Francisco', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$fonts-general: 'Lato', Helvetica, Arial, sans-serif;
+$fonts-headers: 'Libre Baskerville', Georgia, serif;
 
 // Spacing and sizing
 $spacing-normal: 1.5rem;
