--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -25,7 +25,13 @@
 
 .header__site-name__link {
   color: $white;
+  font-size: 1.5rem;
   &:hover {
     color: $color-primary;
+    text-decoration: none;
   }
+}
+
+.header__site-description {
+  margin: 0;
 }
