--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -2,6 +2,7 @@
   width: 100%;
   background: $color-primary;
   background: linear-gradient( 25deg, darken($color-primary, 10), $color-primary );
+  background-image: url(images/photo-1437751068958-82e6fccc9360.jpg);
   padding: $spacing-normal;
   color: $white;
 }
