--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -3,8 +3,13 @@
   background: $color-primary;
   background: linear-gradient( 25deg, darken($color-primary, 10), $color-primary );
   background-image: url(images/photo-1437751068958-82e6fccc9360.jpg);
+  background-position-y: -10%;
+  background-size: cover;
   padding: $spacing-normal;
   color: $white;
+  display: flex;
+  align-items: flex-end;
+  height: 60vh;
 }
 
 .header a {
