--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -41,3 +41,10 @@
 .header__site-description {
   margin: 0;
 }
+
+.header {
+  background: teal;
+  padding: .75rem;
+  width: 400px;
+  border-radius: 5px;
+}
