--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -2,7 +2,7 @@
   width: 100%;
   background: $color-primary;
   background: linear-gradient( 25deg, darken($color-primary, 10), $color-primary );
-  background-image: url(images/photo-1437751068958-82e6fccc9360.jpg);
+  //background-image: url(images/photo-1437751068958-82e6fccc9360.jpg);
   background-position-y: -10%;
   background-size: cover;
   padding: $spacing-normal;
