--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@
 @import "base";
 // Syntax highlighting @import is at the bottom of this file
 @import "header";
+@import "nav";
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
