--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -8,4 +8,7 @@
     width: 100%;
     background: $white;
     text-align: right;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius:  5px;
+    padding: $spacing-normal;
   }
