--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -12,13 +12,6 @@
   height: 60vh;
 }
 
-.header a {
-  color: $white;
-  &:hover {
-    color: lighten($color-primary, 10);
-  }
-}
-
 .header__avatar-link {
   display: block;
   width: 120px;
@@ -42,6 +35,13 @@
   margin: 0;
   padding: 0;
   font-size: $font-size-tiny;
+}
+
+.header__site-description a {
+  color: $white;
+  &:hover {
+    color: lighten($color-primary, 10);
+  }
 }
 
 .header {
