--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -23,7 +23,7 @@
     color: $color-primary;
     border-radius: 5px;
     &:hover {
-        background: $green;
+        background: $color-primary;
         color: $white;
         text-decoration: none;
     }
