--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,32 +1,72 @@
+.header {
+  display: flex;
+  align-items: center;
+  padding: $spacing-small;
+  text-shadow: 1px 1px 0 $black,
+               1px 1px 5px rgba($black, .75);
+}
+
 .header__wrapper {
   width: 100%;
   background: $color-primary;
   background: linear-gradient( 25deg, darken($color-primary, 10), $color-primary );
   background-image: url(images/banner.jpg);
-  background-position-y: -10%;
   background-size: cover;
   padding: $spacing-normal;
   color: $white;
   display: flex;
   align-items: flex-end;
-  height: 60vh;
+  height: 30vh;
+  .default & {
+    min-height: 60vh;
+  }
 }
 
 .header__avatar-link {
   display: block;
-  width: 120px;
-  max-height: 120px;
-  overflow: hidden;
-  border-radius: 3px;
-  float: left;
   margin-right: $spacing-normal;
+  @include height(2);
+  background: $color-primary;
+  border: $spacing-small solid $color-primary;
+  position: relative;
+  &:before {
+    display: block;
+    content: " ";
+    position: absolute;
+    left: -#{$spacing-small};
+    right: -#{$spacing-small};
+    top: -999px;
+    height: 999px;
+    background: $color-primary;
+    background: linear-gradient(0, $color-primary, $color-primary-dark);
+  }
+  &:hover .header__avatar {
+    opacity: 1;
+  }
+}
+
+.header__avatar__wrapper {
+  background: $black;
+  overflow: hidden;
+  width: 120px;
+  height: 120px;
+}
+
+.header__avatar {
+  opacity: .75;
+  transform: translateZ(0);
+  transition: opacity .2s ease-in-out;
+}
+
+.header__site-info {
+  margin: 0;
 }
 
 .header__site-name__link {
   color: $white;
   font-size: $font-size-huge;
   &:hover {
-    color: $color-primary;
+    color: $color-primary-light;
     text-decoration: none;
   }
 }
@@ -40,15 +80,6 @@
 .header__site-description a {
   color: $white;
   &:hover {
-    color: lighten($color-primary, 10);
+    color:$color-primary;
   }
-}
-
-.header {
-  background: $color-primary;
-  padding: $spacing-small;
-  width: 400px;
-  border-radius: 5px;
-  overflow: auto;
-  @include height(2);
 }
