--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,11 @@
 // Syntax highlighting @import is at the bottom of this file
 @import "header";
 @import "nav";
+
+@import "about";
+@import "publications";
+
+@import "footer";
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
