--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
         <a href="{{ site.baseurl }}/" class="nav__link">About</a>
         <!-- <a href="{{ site.baseurl }}/blog" class="nav__link">Blog</a> -->
         <a href="{{ site.baseurl }}/documents/{{ site.current-cv }}" class="nav__link">Download my CV</a>
+        <a href="{{ site.baseurl }}/documents/{{ site.teaching philosopy }}" class="nav__link">Teaching Philosophy</a>
       </nav>
     </div>
 
