--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,11 @@
 
     <div class="nav">
       <nav class="nav__wrapper">
-        <a href="{{ site.baseurl }}/" class="nav__link">About</a>
+        <a href="{{ site.baseurl }}" class="nav__link">Home</a>
+        <a href="{{ site.baseurl }}about" class="nav__link">About</a>
         <!-- <a href="{{ site.baseurl }}/blog" class="nav__link">Blog</a> -->
-        <a href="{{ site.baseurl }}/documents/{{ site.current-cv }}" class="nav__link">Download my CV</a>
-        <a href="{{ site.baseurl }}/documents/{{ site.teaching-philosophy }}" class="nav__link">Teaching Philosophy</a>
+        <a href="{{ site.baseurl }}documents/{{ site.current-cv }}" class="nav__link">Download my CV</a>
+        <a href="{{ site.baseurl }}documents/{{ site.teaching-philosophy }}" class="nav__link">Teaching Philosophy</a>
       </nav>
     </div>
 
